--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js",
     "start": "node --experimental-modules --es-module-specifier-resolution=node index.js"
   },
+  "type":"module",
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
