--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "start": "node --experimental-modules --es-module-specifier-resolution=node index.js"
   },
   "dependencies": {
+    "agenda": "^4.2.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "moment-timezone": "^0.5.33",
     "mongoose": "^5.13.8",
     "telegraf": "^4.4.1"
   },
