--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js",
-    "start": "node --experimental-modules --es-module-specifier-resolution=node index.js"
+    "prod": "node --experimental-modules --es-module-specifier-resolution=node index.js",
+    "start": "pm2 start npm -- run prod",
+    "status": "pm2 status",
+    "stop": "pm2 stop all"
   },
   "dependencies": {
     "agenda": "^4.2.1",
     "dotenv": "^10.0.0",
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.13.8",
+    "pm2": "^5.1.1",
     "telegraf": "^4.4.1"
   },
   "devDependencies": {
