--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "agenda": "^4.2.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.13.8",
     "pm2": "^5.1.1",
