--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "scripts": {
     "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js",
     "prod": "node --experimental-modules --es-module-specifier-resolution=node index.js",
-    "web": "pm2 start npm -- run prod",
-    "start": "pm2 start npm -- run prod",
-    "status": "pm2 status",
-    "stop": "pm2 stop all"
+    "web": "pm2-runtime start npm -- run prod",
+    "start": "pm2-runtime start npm -- run prod",
+    "status": "pm2-runtime status",
+    "stop": "pm2-runtime stop all"
   },
   "dependencies": {
     "agenda": "^4.2.1",
